ATLAS-2773: remove kafka-test dependency